@@ -1,3 +1,15 @@
+Thu Mar  3 18:38:26 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* {bcc32,win32,wince}/Makefile.sub (config.h): check if affected
+	  when makefiles are modified.
+
+	* {bcc32,win32,wince}/Makefile.sub (config.status): add variables
+	  for tests.
+
+	* win32/ifchange.bat: try to update a file only if modified.
+
+	* win32/resource.rb: more descriptions.
+
 Thu Mar  3 11:49:51 2005  Kouhei Sutou  <kou@cozmixng.org>
 
 	* sample/rss/tdiary_plugin/rss-recent.rb: added site information.
